test/e2e/chainsaw/shared-httproute/assertions/httproute-none-active.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: shared-httproute
  namespace: default
  (contains(keys(labels || `{}`), 'rollouts.argoproj.io/gatewayapi-canary')): false
  (contains(keys(annotations || `{}`), 'rollouts.argoproj.io/gatewayapi-active-rollouts')): false
