test/e2e/chainsaw/shared-httproute/resources/rollout-a.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: shared-httproute-a
  namespace: default
spec:
  replicas: 2
  strategy:
    canary:
      canaryService: argo-rollouts-canary-service
      stableService: argo-rollouts-stable-service
      trafficRouting:
        plugins:
          argoproj-labs/gatewayAPI:
            httpRoute: shared-httproute
            namespace: default
      steps:
        - setWeight: 30
        - pause: {duration: 30s}
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: rollouts-demo
  template:
    metadata:
      labels:
        app: rollouts-demo
    spec:
      containers:
        - name: rollouts-demo
          image: argoproj/rollouts-demo:red
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
