test/e2e/chainsaw/shared-httproute/resources/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: argo-rollouts-stable-service-b
  namespace: default
spec:
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: rollouts-demo-b
---
apiVersion: v1
kind: Service
metadata:
  name: argo-rollouts-canary-service-b
  namespace: default
spec:
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: rollouts-demo-b
